@@ -1,3 +1,3 @@
 #!/bin/sh
 cd /minecraft
-exec /sbin/setuser minecraft screen -dmS minecraft java -Xms1024M -Xmx1024M -jar minecraft_server.jar nogui
+exec /sbin/setuser minecraft java -Xmx2048M -Xms1024M -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -jar minecraft_server.1.7.10.jar nogui
